# word-dict

./: README.md  README.md.save  md  word-dict-1.3.6.deb  word_data.txt  word_info.md
1.3.4/: word-dict.deb
1.3.5/: word-dict-1.3.5.deb  word-dict-1.4.2.deb
1.4.4/: word-dict-1.4.4.deb
1.4.5/: word-dict-1.4.5.deb
1.4.6/: word-dict-1.4.6.deb
1.4.7/: word-dict-1.4.7.deb
1.4.8/: word-dict-1.4.8.deb
1.4.9/: README.md  word-dict-1.4.9.deb
1.5.0/: README.md  word-dict-1.5.0.deb
1.5.1/: README.md  word-dict-1.5.1.deb
my_module/: pyproject.toml
my_module/.github/workflows/: publish.yml
my_module/src/tool/: yt.py
my_module/src/tool/move/: __init__.py
my_module/src/tool/word/: copy.py
src/aryu44.egg-info/: PKG-INFO  SOURCES.txt
src/tool/: help.py
src/tool/move/: git.py
src/tool/word/: __init__.py  info.py
