[build-system]
requires = ["setuptools>=61.0.0","yt_dlp>=2026.6.9"]
build-backend = "setuptools.build_meta"

[project]
name = "aryu44"
version = "0.2.0"
description = "tool"
requires-python = ">=3.7"
classifiers = [
   "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["src"]
